[package]
name = "control-surface"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embedded-hal = { version = "1.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1", features = ["defmt-03"] }
heapless = "0.8.0"
midly = { version = "0.5.3", default-features = false, optional = true }
num-traits = { version = "0.2.19", default-features = false }


[features]
midi = ["dep:midly"]
